# arcane

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.sh
arcs/: analytics_demo.aql  demo.aql  demo.arc  rback.aql  test_batch.aql  test_batch.arc
benches/: benchmark.py  dbms.rs
src/: arcana.rs  arcane_user.rs  auth.rs  cli.rs  crypto.rs  error.rs  lib.rs  main.rs
src/analytics/: mod.rs  stats.rs  streaming.rs  time_series.rs  window.rs
src/authentication/: crypto.rs  db_encryption.rs  encryption_manager.rs  mod.rs
src/engine/: mod.rs
src/error/: mod.rs
src/meta/: mod.rs
src/parser/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
src/wal/: mod.rs
