[package]
name = "arcane"
version = "0.1.0"
edition = "2021"
description = "A high-performance, hash-bucketed DBMS"
license = "GPL-3.0-only"

[lib]
name = "arcane"
path = "src/lib.rs"

[[bin]]
name = "arcaned"
path = "src/main.rs"

[[bin]]
name = "arcc"
path = "src/cli.rs"

[[bin]]
name = "arcana"
path = "src/arcana.rs"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
dashmap = "5"
crossbeam-channel = "0.5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crc32fast = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
serde_json = "1"
rpassword = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "dbms"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
